--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <div class="conta">
+    <div class="container">
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <%= render 'shared/header' %>
