--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,2 +1,28 @@
-<h1>Homepage#index</h1>
-<p>Find me in app/views/homepage/index.html.erb</p>
+<div class="col-lg-10 mx-auto mt-5">
+    <div class="card mt-4 mb-4">
+        <div class="card-body">
+            <h3 class="text-center mb-3">Search professionals across the world!</h3>
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Search by country or city" aria-label="Search  by country or city" aria-describedby="button-addon2">
+                <button class="btn btn-primary" id="button-addon2">Search</button>
+            </div>
+        </div>
+    </div>
+    <div class="row mt-4 mb-4">
+        <% @users.each do |user|%>
+            <div class="col-lg-3 mb-3 mt-3">
+                <div class="card text-center shadow" style="min-height: 405px;">
+                    <div class="card-body">
+                        <%= image_tag 'user.jpg', style: "width: 150px; border-radius: 50%; border: 2px solid #0d6efd", class: "mb-3" %>
+                        <div class="user-info">
+                            <h5><%= user.name%></h5>
+                            <p class="lead"><%= user.profile_title%></p>
+                            <small class="text-primary"><%= user.country%></small><br>
+                            <%= link_to 'View Profile', "javascript::void(0)", class: "btn btn-primary mt-3" %>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        <% end %>
+    </div>
+</div>
